Updated Jetty version due to vulnerabilities & uses fasterxml Jackson.
Change-Id: If6eaf454e06ba8afb05bbb2c752f53f4de79853f